--- a/src/default.css
+++ b/src/default.css
@@ -82,6 +82,7 @@ button {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	
 }
 
 h1 {
@@ -109,6 +110,19 @@ span {
 	margin: 0;
 }
 
+.main-center-contents {
+	padding-bottom: 100px;
+}
+
+.main-right-contents {
+	padding-top: 20px;
+	width: calc(50vw - 300px);
+	position: fixed;
+	top: 60px;
+	right: 0px;
+	background: rgba(0,0,0,0);
+}
+
 .unit-box {
 	flex-shrink: 1;
 	width: 600px;
@@ -118,6 +132,11 @@ span {
 	border-radius: 10px;
 }
 
+@media (max-width: 1400px) {
+	.main-right-contents {
+		display: none;
+	}
+}
 
 @media (max-width: 1024px) {
 	h1 {
@@ -152,9 +171,14 @@ span {
 		flex-direction: column;
 	}
 	.main-center-contents {
-		width: 95%;
+		width: 100%;
 	}
 	.unit-box {
 		width: 100%;
+		flex-shrink: 1;
+		border-right:0px;
+		border-left: 0px;
+		box-shadow: none;
+		border-radius: 0px;
 	}
 }
