--- a/src/default.css
+++ b/src/default.css
@@ -129,6 +129,8 @@ span {
 	border: 1px solid rgba(245, 245, 244, 1);
 	box-shadow: 0px 3px 5px 0px rgba(248, 248, 248, 1);
 	padding: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
 	border-radius: 10px;
 }
 
