--- a/src/components/views/HomePage/HomePage.css
+++ b/src/components/views/HomePage/HomePage.css
@@ -4,3 +4,13 @@
     flex-direction: column;
     flex-grow: 1;
 }
+
+.home-page-top-space {
+    height: 20px;
+}
+
+@media (max-width: 600px) {
+    .home-page-top-space {
+        height: 0px;
+    }
+}
