--- a/src/components/views/StockPage/StockPage.css
+++ b/src/components/views/StockPage/StockPage.css
@@ -12,6 +12,9 @@
     box-shadow: 0px 4px 4px 0px rgba(220, 220, 220, 1);
 }
 
+
+
+
 @media (max-width: 1024px) {
     .stock-page-check-point-container {
         flex-direction: column;
@@ -23,4 +26,14 @@
     .dashboard-shadow-box {
         padding: 15px;
     }
+}
+
+@media (max-width: 600px) {
+    .stock-page-top-space {
+        height: 0px;
+    }
+    .unit-box.stock-profile {
+        border: 0px;
+    }
+    
 }
