--- a/src/components/views/StockPage/StockPage.css
+++ b/src/components/views/StockPage/StockPage.css
@@ -12,8 +12,9 @@
     box-shadow: 0px 4px 4px 0px rgba(220, 220, 220, 1);
 }
 
-
-
+.stock-page-top-space {
+    height: 20px;
+}
 
 @media (max-width: 1024px) {
     .stock-page-check-point-container {
