--- a/src/default.css
+++ b/src/default.css
@@ -116,10 +116,10 @@ span {
 
 .main-right-contents {
 	padding-top: 20px;
-	width: calc(50vw - 250px);
+	width: 450px;
 	position: fixed;
 	top: 60px;
-	right: 0px;
+	right: calc(50vw - 300px - 450px);
 	background: rgba(0,0,0,0);
 }
 
