update layout of stock page

--- a/src/components/views/StockPage/StockPage.css
+++ b/src/components/views/StockPage/StockPage.css
@@ -35,7 +35,7 @@
     }
     .unit-box.stock-profile {
         border: 0px;
-        padding-top: 0;
+        /* padding-top: 0; */
     }
     
 }
