--- a/src/components/views/StockPage/StockPage.css
+++ b/src/components/views/StockPage/StockPage.css
@@ -34,7 +34,7 @@
         height: 0px;
     }
     .unit-box.stock-profile {
-        border: 0px;
+        border-top: 0px;
         /* padding-top: 0; */
     }
     
