--- a/src/default.css
+++ b/src/default.css
@@ -12,7 +12,7 @@ html {
 	word-wrap: break-word;
 }
 body {
-	background: #fff;
+	background: rgba(0,0,0,0);
 	-webkit-font-smoothing: antialiased;
 }
 html, body, div, span, applet, object, iframe,
