--- a/src/default.css
+++ b/src/default.css
@@ -99,4 +99,24 @@ span {
 
 .main-contents {	
 	min-height: 1000px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 20px;
+	padding-bottom: 100px;
+}
+
+.content-box {
+	width: 500px;
+	background: rgba(0,0,0,0);
+	border: 1px solid rgba(245, 245, 244, 1);
+	box-shadow: 0px 3px 5px 0px rgba(248, 248, 248, 1);
+	padding-bottom: 50px;
+}
+
+.content-box-title {
+	color: #333;
+	margin: 0;
+	margin-left: 20px;
+	margin-top: 15px;
 }
