fix the menu reset issue

--- a/src/default.css
+++ b/src/default.css
@@ -141,6 +141,14 @@ span {
 	align-items: center;
 }
 
+.container-right-align {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-items: center;
+}
+
 .subcontents-profile-image {
 	width: 100px;
 	height: 100px;
